# contexts/ordering/internal/adapter/inbound/openapi/oas_validators_gen.go
@@ -65,6 +65,30 @@ func (s *GetOrderUnprocessableEntity) Validate() error {
 	return nil
 }
 
+func (s *GetShipmentBadRequest) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *GetShipmentNotFound) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *GetShipmentUnprocessableEntity) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
 func (s *InvalidParam) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
@@ -124,9 +148,80 @@ func (s InvalidParamCode) Validate() error {
 		return nil
 	case "invalid_reservation_ref":
 		return nil
+	case "invalid_shipment_id":
+		return nil
+	case "invalid_tracking_number":
+		return nil
 	default:
 		return errors.Errorf("invalid value: %v", s)
 	}
+}
+
+func (s *MarkShippedBadRequest) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *MarkShippedConflict) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *MarkShippedNotFound) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *MarkShippedRequest) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := (validate.String{
+			MinLength:     1,
+			MinLengthSet:  true,
+			MaxLength:     0,
+			MaxLengthSet:  false,
+			Email:         false,
+			Hostname:      false,
+			Regex:         nil,
+			MinNumeric:    0,
+			MinNumericSet: false,
+			MaxNumeric:    0,
+			MaxNumericSet: false,
+		}).Validate(string(s.TrackingNumber)); err != nil {
+			return errors.Wrap(err, "string")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "trackingNumber",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s *MarkShippedUnprocessableEntity) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
 }
 
 func (s *OrderView) Validate() error {
@@ -207,6 +302,73 @@ func (s *PlaceOrderUnprocessableEntity) Validate() error {
 	return nil
 }
 
+func (s *PrepareShipmentBadRequest) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *PrepareShipmentConflict) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *PrepareShipmentNotFound) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *PrepareShipmentRequest) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := (validate.String{
+			MinLength:     1,
+			MinLengthSet:  true,
+			MaxLength:     0,
+			MaxLengthSet:  false,
+			Email:         false,
+			Hostname:      false,
+			Regex:         nil,
+			MinNumeric:    0,
+			MinNumericSet: false,
+			MaxNumeric:    0,
+			MaxNumericSet: false,
+		}).Validate(string(s.OrderId)); err != nil {
+			return errors.Wrap(err, "string")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "orderId",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s *PrepareShipmentUnprocessableEntity) Validate() error {
+	alias := (*ProblemResponseStatusCode)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
 func (s *ProblemDetails) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
@@ -265,4 +427,38 @@ func (s *ProblemResponseStatusCode) Validate() error {
 		return &validate.Error{Fields: failures}
 	}
 	return nil
+}
+
+func (s *ShipmentView) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.Status.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "status",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s ShipmentViewStatus) Validate() error {
+	switch s {
+	case "preparing":
+		return nil
+	case "shipped":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
 }
